添加实时查看车辆信息模块